plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'me.blog'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // PostgreSQL
    implementation 'org.postgresql:postgresql:42.7.3' 
    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
    // H2 Database
    runtimeOnly 'com.h2database:h2'
    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // AOP
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    // Log
    implementation 'org.slf4j:slf4j-api'
    // Lombok
    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    // aws s3
    implementation 'software.amazon.awssdk:s3:2.20.0'
    implementation 'software.amazon.awssdk:core:2.20.0'
    // json web token
    implementation 'io.jsonwebtoken:jjwt:0.12.6'
    // Jsoup
    implementation 'org.jsoup:jsoup:1.15.4'
}

tasks.named('test') {
    useJUnitPlatform()
}

test {
    jvmArgs += ['-XX:+EnableDynamicAgentLoading']
}
